# Image-Processor-Uni

./: .tester.json  CMakeLists.txt  README.md  image_class.cpp  image_class.h  image_processor.cpp  readme.md
filters/: matrix_apply.cpp  matrix_apply.h
filters/crop/: crop_filter.cpp  crop_filter.h
filters/edge_detect/: edge_detection.cpp  edge_detection.h
filters/floyd_steinberg/: dithering.cpp  dithering.h
filters/gray_shades/: gray_shades.cpp  gray_shades.h
filters/negative/: negative.cpp  negative.h
filters/sharp/: sharp.cpp  sharp.h
test_script/: test_image_processor.py
